# Multiple-Linear-Regression

./: .gitmodules  CMakeLists.txt  README.md  mlr.py
include/: MLRModel.h
src/: MLRModel.cpp
tests/: Test.cpp
